# snel

./: .env.example  .env.local.example  .env.test  .flake8  .gitignore  .vercelignore  AGENTS.md  DEPLOYMENT.md  DEPLOYMENT_NEXT_STEPS.md  FOUNDATION_UPGRADE_REPORT.md  HACKATHON_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  KAIA_INTEGRATION_REPORT.md  KNOWLEDGE_BASE_IMPROVEMENTS.md  LICENSE  Makefile  PHASE_1_COMPLETE.md  PHASE_2_STARTER.md  PHASE_2_STATUS.md  PROGRESS_SUMMARY.md  Pipfile  README-coinbase-wallet.md  README.md  SNEL_FOUNDATION_STATUS.md  TESTING.md  VERCEL.md  agent.toml  api.py  deploy-cdp-update.sh  deploy-telegram-fix.sh  deploy-to-northflank.sh  deploy.sh  example.py  fix-env-variables.sh  fix-redis-ssl.sh  fix-serverless-event-loop.sh  fix-telegram-webhooks.sh  fix-wallet-service-redis.sh  install-cdp-direct.sh  integrating-with-telegram.md  (+30 more)
.claude/: settings.local.json
api/: index.py  middleware.py  patches.py  test_logger.py  vercel.py
app/: commands_router.py  dependencies.py  main.py  prompts.py  telegram_agent.py
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.coral  README.md  ci_cd_test_trigger.md  ci_cd_test_trigger.txt  demo_circle_cctp.py  demo_mnee.py  docker-compose.yml  ecosystem.config.js  load_test_zerox.py  manual_quoter_test.py  performance_test_zerox.py  requirements.txt  simple_validate.py  start.sh  test_ci_cd_verification.tmp  test_conversation_scenario.py  test_firecrawl.py  test_firecrawl_simple.py  test_gmp_integration_simple.py  test_integration_swap.py  test_mnee_api_live.py  test_mnee_complete_demo.py  test_mnee_integration.py  test_mnee_integration_flow.py  test_mnee_swap.py  test_privacy_question.py  test_real_api.py  test_uniswap_debug.py  validate_axelar_service.py  validate_circle_cctp.py  validate_config.py  validate_uniswap_v3.py  validate_zerox_v2.py
backup/: .flake8  api.py  configure_logging.py  example.py  logger.py  package.json  vercel.json
cdp-test/: test_cdp.py  test_cdp_fixed.py  test_requests.py
cdp-venv/: pyvenv.cfg
contracts/: Scarb.toml
deployment_bundle/: deploy_coral.sh  requirements.txt  verify_coral_integration.py
docs/: ARCHITECTURE.md  ARCHITECTURE_FOUNDATION.md  CHAIN_INTEGRATIONS_DEPLOYMENT.md  CORAL_INTEGRATION.md  CRONOS_DEX_INTEGRATION.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVELOPMENT.md  ENHANCED_PAYMENT_UX_SUMMARY.md  EVALUATION_REPORTS.md  FRONTEND_GMP_INTEGRATION_GUIDE.md  GMP_INTEGRATION.md  GMP_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATIONS.md  MAIN.md  MNEE_COMMUNICATION_EVALUATION.md  MNEE_INTEGRATION_EVALUATION.md  MNEE_UI_UX_EVALUATION.md  NORTHFLANK_DEPLOYMENT.md  PAYMENTS.md  PAYMENT_INTERFACE_DESIGN.md  PAYMENT_OPTIMIZATION_SUMMARY.md  PHASE2_PROGRESS_SUMMARY.md  PL_GENESIS_PLAN.md  PRIVACY.md  PRIVACY_EDUCATION_IMPLEMENTATION.md  PRIVACY_INTEGRATION_IMPROVEMENTS.md  PROTOCOL_RESEARCH_TIERS.md  README.md  ROADMAP.md  SNEL_FOUNDATION_STATUS.md  STARKNET_PRIVACY.md  STATUS.md  SUBMISSION_DRAFT.md  ZCASH_INTEGRATION_ASSESSMENT.md  coinbase_integration.md  index.md  mkdocs.yml  ssl_configuration.md
examples/: betting.py  simple.py  twitter.py
frontend/: .env.example  .env.production  .eslintrc.js  .gitignore  README.md  build.sh  netlify-build.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  (+1 more)
(+636 files in other folders)
