[project]
name = "dowse"
version = "0.1.6"
description = ""
authors = [
    {name = "johnny-emp",email = "johnny@empyrealsdk.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "eth-typeshed-py (>=0.1.26,<0.2.0)",
    "eth-rpc-py (>=0.1.26,<0.2.0)",
    "emp-agents (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
ipython = "^8.32.0"

[tool.ruff]
ignore = ["E704"]
src-paths = ["./src"]
line-length = 120


[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*:",
    "ignore::DeprecationWarning:jose.*",
    "ignore::DeprecationWarning:websockets.legacy.*",
    "ignore::DeprecationWarning:pytest_asyncio.*",
]
asyncio_mode = "auto"

[tool.poetry.scripts]
main = "main:main"
simple_program = "examples.program.swap.executor:main"
