[tool.poetry]
name = "snel-pointless"
version = "0.1.0"
description = "AI Crypto Assistant"
authors = ["papa <papaandthejimjams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.8"
uvicorn = "0.34.0"
pydantic = "2.10.6"
httpx = "0.28.1"
python-dotenv = "1.0.1"
slowapi = "0.1.9"
eth-rpc-py = "0.1.26"
eth-account = "0.13.5"
eth-typing = "5.2.0"
dowse = "0.1.0"
emp-agents = ">=0.2.0.post1,<0.3.0"
upstash-redis = "1.2.0"
redis = "5.0.1"
web3 = "6.15.1"
eth-utils = "2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E704"]
src-paths = ["./src"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.poetry.scripts]
main = "main:main"
simple_program = "examples.program.swap.executor:main"
